2002-06-20  Radek Doulik  <rodo@ximian.com>

	* gtkhtml.c:  update focus_object to work properly with frames
	(focus): try to be clever about borders

	* htmlengine.c: update focus_object to work properly with frames

	* htmlgdkpainter.c (alloc_e_font_try): use gdk_fontset_load only
	when necessary, otherwise use gdk_font_load

	* htmlobject.c (html_object_engine): new function, returns engine
	which contains clue which object directly (no frames on way from
	clue to object)
	(html_object_calc_abs_position): correct calculation, take care of
	frames and thus border size

2002-06-19  Larry Ewing  <lewing@ximian.com>

	* gtkhtml.c (selection_received): add some logic to be able to
	receive text/html selections from Star/Open Office.  For some
	unfathomable reason they decided to make html selections use utf8
	instead of ucs2 (what netscape/mozilla sort of set in stone when
	they first implemented text/html).  So to deal with this we try to
	validate the selection as utf8 and if we fail use ucs2 instead,
	this should be relatively safe and correct.

2002-06-18  Radek Doulik  <rodo@ximian.com>

	* gtkhtml.c (focus): fixed horizontal offset calculation

2002-06-14  Larry Ewing  <lewing@ximian.com>

	* gtkhtml.c (selection_received): make paste as quotation work for
	string selections.  If we are doing a citation paste, don't use
	the widget->window == event->window shortcut.

2002-06-12  Larry Ewing  <lewing@ximian.com>

	* htmlimage.c: render images with no alt text as [image] in the
	plain painter.
	
	* gtkhtml.c: make the functions that deal with changing the indent
	level use an array of HTML_LIST_TYPE values for the changes, add
	gtk_html_indent_push/pop_level.

	* gtkhtml.h: update the prototypes.

	* htmlengine-edit-cut-and-paste.c (check_flows): the flow is the
	parent not the object. This was causing nasty crashes that ate a
	lot of memory.  Fixes Ximian bug #26150

	* htmlengine-edit-clueflowstyle.c: make all the style operations