@@ -1,3 +1,8 @@
+2002-06-21  Radek Doulik  <rodo@ximian.com>
+
+	* htmlgdkpainter.c: updated font loading code to use less
+	resources
+
 2002-06-20  Radek Doulik  <rodo@ximian.com>
 
 	* gtkhtml.c:  update focus_object to work properly with frames
